# Massively_Parallel_Machine_Learning

./: .gitignore  README.md  pyproject.toml
KMeans/: centralized_version.ipynb  spark_version.ipynb
Logistic Regression/: CV_spark_version.ipynb  centralized_version.ipynb  centralized_version_metrics.ipynb  spark_version copia.ipynb  spark_version.ipynb  spark_version_metrics.ipynb
